<resources>
    <string name="app_name">CuponMeals</string>
    <string name="api_maps_key">AIzaSyDZQd1IGNPiUYaWaoee0cBdIdRlj-npYzQ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="btn_nuevo_crud">Agregar</string>
    <string name="btnBuscar">Buscar</string>
    <string-array name="crud_array">
        <item>Editar Usuario</item>
        <item>Eliminar Usuario</item>
    </string-array>
    <string-array name="crud_array_Cupones">
        <item>Eliminar Cupón</item>
    </string-array>
    <string-array name="restaurante_array">
        <item>Editar Restaurante</item>
        <item>Ubicacion geografica</item>
        <!--        <item>Eliminar</item>-->
    </string-array>
    <string name="dialog_crear">Nuevo</string>
    <string name="guardar_usuario_configuracion">Guardar</string>

    <string name="guardado">¡Se Guardo Existosamente!</string>
    <string name="dialog_editar">Editar</string>
    <string name="eliminado">Se Elimino el registro</string>
    <string name="no_eliminado">No es posible eliminar el registro</string>
    <string name="text_bienvenida">Bienvenido/a</string>
    <string name="text_informacion">Disfruta los descuentos más deliciosos del pais con nuestra aplicación de cupones para restaurantes que pueden ser canjeados mediante códigos QR. Recuerda estos cupones tienen un tiempo de validez limitado.</string>

    <string name="title_username">Nombre de Usuario</string>
    <string name="title_rol">Rol</string>
    <string name="title_email">Correo</string>
    <string name="title_contrasena">Contraseña</string>
    <string name="cambiar_contrasena_confirmacion_1">Confirmar Contraseña</string>
    <string name="cambiar_contrasena_confirmacion_2">Confirmar Contraseña</string>
    <string name="cambiar_contrasena">Actualizar Contraseña</string>
    <string name="title_datos_personales">Información Personal</string>
    <string name="title_perfil_de_usuario_nombre">Primer Nombre</string>
    <string name="title_perfil_de_usuario_apellidos">Primer Apellido</string>
    <string name="contrasena_no_coincide">Las Contraseñas NO coinciden</string>
    <string name="invalido_username">Datos Inválidos</string>
    <string name="title_pefil_de_usuario">Información Perfil</string>
    <string name="title_telefono">Número Telefónico</string>

    <string name="lbl_datos_restaurante">Información del Restaurante</string>
    <string name="lbl_datos_restaurante2">Imagen del Restaurante</string>
    <string name="lbl_registrar_negocio">Registrar Restaurante</string>
    <string name="btn_buscar_negocio">Buscar Restaurante</string>
    <string name="hint_nombre_negocio">Nombre</string>
    <string name="hint_dirección_negocio">Dirección</string>
    <string name="hint_latitud">Latitud</string>
    <string name="hint_longitud">Longitud</string>
    <string name="hint_id_map">ID Google Maps</string>
    <string name="hint_telefono_negocio">Tel.</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>

</resources>