<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".vistas.RestauranteFragment">

    <Button
        android:id="@+id/btn_buscar_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/quantum_lightblueA200"
        android:drawableRight="@drawable/baseline_map_24"
        android:fontFamily="casual"
        android:text="@string/btn_buscar_negocio"
        android:textStyle="bold" />

    <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="20dp"
                android:background="#141414" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="casual"
        android:text="@string/lbl_datos_restaurante"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
                android:id="@+id/edit_nombre_negocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_nombre_negocio"
                android:ems="10"
                android:inputType="textPersonName"
                android:enabled="false"
                android:text="" />

            <EditText
                android:id="@+id/edit_direccion_negocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_dirección_negocio"
                android:inputType="textPersonName"
                android:enabled="false"
                android:text="" />


            <EditText
                android:id="@+id/edit_tell_negocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_telefono_negocio"
                android:ems="10"
                android:enabled="false"
                android:text="" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="casual"
        android:text="@string/lbl_datos_restaurante2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_negocio"
        android:layout_width="370dp"
        android:layout_height="208dp"

        android:background="#224FC3F7" />

    <Button
        android:id="@+id/guardar_restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/quantum_lightblueA200"
        android:drawableRight="@drawable/baseline_save_24"
        android:enabled="false"
        android:text="@string/guardar"
        android:textColor="#FDFDFD" />

</LinearLayout>