<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="597dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/foto_perfil"
                    android:layout_width="200dp"
                    android:layout_height="220dp"
                    android:background="@color/quantum_lightblueA200"
                    android:src="@drawable/ic_baseline_person_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/tomar_foto_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tomar Foto"
                        android:drawableRight="@drawable/ic_baseline_camera_alt_24"
                        android:backgroundTint="@color/quantum_amber400" />

                    <ImageButton
                        android:id="@+id/upload_foto_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_file_upload_24"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email" />

            <EditText
                android:id="@+id/perfil_de_usuario_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_rol" />

            <Spinner
                android:id="@+id/perfil_spinner_rol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_username" />

            <EditText
                android:id="@+id/perfil_de_usuario_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:enabled="false"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contrasena" />

            <EditText
                android:id="@+id/perfil_de_usuario_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/title_contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/perfil_de_usuario_contrasena2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cambiar_contrasena_confirmacion_2"
                android:inputType="textPassword"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_cambiar_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/quantum_lightblueA200"
                android:drawableRight="@drawable/baseline_edit_24"
                android:text="@string/cambiar_contrasena" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="40dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_perfil_de_usuario_nombre" />

            <EditText
                android:id="@+id/perfil_de_usuario_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_perfil_de_usuario_apellidos" />

            <EditText
                android:id="@+id/perfil_de_usuario_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_telefono" />

            <EditText
                android:id="@+id/perfil_de_usuario_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="phone" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_guardar_usuario_configuracion"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/quantum_lightblueA200"
            android:drawableRight="@drawable/baseline_save_24"
            android:layout_height="wrap_content"
            android:text="@string/guardar_usuario_configuracion"/>
    </LinearLayout>
</LinearLayout>